--- a/slide2.Rmd
+++ b/slide2.Rmd
@@ -50,7 +50,7 @@ Authors: James Vaupel and Jim Oeppen. \alert{Gain / year: } 3 months.
 
 ## Sweden 1968-2014: Remaining life at birth
 
-```{r gainperyear}
+```{r gainperyear, eval = FALSE}
 library(Sweden)
 library(eha)
 ##source("R/mpch.R")
@@ -80,7 +80,7 @@ abline(h = c(70, 75, 80, 85), lty = 3)
 
 ## Sweden 1968-2014: Remaining life at age 90
 
-```{r gainperyear90}
+```{r gainperyear90, eval = FALSE}
 library(Sweden)
 fd <- getDeaths(sex = "females", ages = 90:100)
 fp <- getPop(sex = "females", years = 1968:2017, ages = 90:100)
@@ -654,7 +654,8 @@ y <- Hgomp(x, fit.g$coefficients)
 lines(x, y, col = "blue")
 ##check.dist(fit.c, fit.g, col = c("red", "blue"), xlab = "Age")
 ```
-$r = -0.064 \; (0.239)$ 
+
+r = -0.064 (0.239), mean =  `r round(exp(-fit.g$coefficients[2]), 3)`  
 
 
 <!--
@@ -833,50 +834,6 @@ par(oldpar)
 ```
 -->
 
-## Cohort version, 105+
-
-```{r cohortversion}
-lastyr <- 2004
-c105 <- s105[s105$birthdate + 105 > 1969 & s105$birthdate + 105 < lastyr, ]
-n.m <- sum(c105$KON == 1)
-n.w <- sum(c105$KON == 2)
-par(las = 1)
-with(c105[c105$KON == 2, ], drawLexis(enter, exit, event, birthdate, col = "red" , xlim = c(1969, 2015), 
-                                      ylim = c(105, 115), at = c(1969, 1980, 1990, lastyr)))
-with(c105[c105$KON == 1, ], drawLexis(enter, exit, event, birthdate, col = "blue", add = TRUE))
-abline(h = 105)
-##abline(v = c(1969, 2014), lty = 3)
-abline(h = c(106, 107, 108, 109, 110, 111, 112, 113, 114), lty = 3)
-legend("topleft", legend = c("Men", "Women"), col = c("blue", "red"), lty = 1)
-legend("top", legend = c("Dead", "Censored"), pch = c("+", "o"))
-lines(c(1969, 1969 + 8), c(105, 105 + 8), lwd = 2)
-lines(c(lastyr+0.1, lastyr + 0.1 + 8), c(105, 105 + 8), lwd = 2)
-```
-
-\scriptsize
-
-`r n.w` women, `r n.m` men.
-
-## Cohort Analysis
-
-\scriptsize
-
-```{r cohanal, results='asis'}
-c105$cohort <- cut(c105$birthdate + 105, c(1969, 1985, 1995, 2004))
-fit <- phreg(Surv(enter, exit, event) ~ cohort + sex, data = c105, dist = "gompertz", param = "rate")
-dr <- drop1(fit, test = "Chisq")
-ltx(fit, dr = dr)
-```
-
-
-## Cumulative hazards by period
-
-```{r bysex}
-fit <- coxreg(Surv(enter, exit, event) ~ strata(cohort), data = c105)
-plot(fit, col = c("blue", "red", "black"), lwd = 1.5, lty = c(1, 2, 4), xlab = "Age", fn = "surv")
-abline(h = 0, v = 105)
-```
-
 ## Italy, 105+ 2009--2015 (Science June 29, 2018)
 
 \includegraphics[width=\textwidth]{myfigs/plateau.png}
@@ -908,10 +865,15 @@ swit$country <- factor(swit$country)
 fit <- phreg(Surv(enter, exit, event) ~ strata(country) + I(cohort - 1900) + sex, data = swit, dist = "gompertz")
 ##dr = drop1(fit, test = "Chisq")
 ##ltx(fit, dr = dr)
-plot(fit, fn = "sur", col = c("red", "blue"))
+plot(fit, fn = "sur", col = c("red", "blue"), axes = FALSE, xlab = "Age", 
+     lwd = 1.5, printLegend = "topright")
+ctt <- seq(0, 10, by = 2)
+axis(1, at = ctt, labels = ctt + 105)
+axis(2, las = 1)
+box()
 ```
 
-## Skellefteå-Umeå data
+## Skellefteå-Umeå data, birth cohort 1810-1850
 
 ```{r skum, fig.width = 11}
 library(skum)
@@ -941,6 +903,18 @@ abline(v = 0)
 abline(v = c(10, 20, 30, 40), lty = 3)
 
 ```
+
+## Conclusion
+
+\begin{itemize}
+\item No evidence of limits to human life
+\begin{itemize}
+\item Not rejecting a null hypothesis means no information
+\end{itemize}
+\item The mortality plateau after age 105 seems universal.
+\item Be aware of risks of sampling bias.
+\item Ditto of informative censoring.
+\end{itemize}
 
 ## Extra material
 
@@ -1005,4 +979,49 @@ library(eha)
 fit <- phreg(Surv(enter-105, exit-105, event) ~ sex + I(birthdate - 1900), data = s105[s105$event == 1, ])
 dr = drop1(fit, test = "Chisq")
 ltx(fit, dr = dr)
+```
+
+
+## Cohort version, 105+
+
+```{r cohortversion}
+lastyr <- 2004
+c105 <- s105[s105$birthdate + 105 > 1969 & s105$birthdate + 105 < lastyr, ]
+n.m <- sum(c105$KON == 1)
+n.w <- sum(c105$KON == 2)
+par(las = 1)
+with(c105[c105$KON == 2, ], drawLexis(enter, exit, event, birthdate, col = "red" , xlim = c(1969, 2015), 
+                                      ylim = c(105, 115), at = c(1969, 1980, 1990, lastyr)))
+with(c105[c105$KON == 1, ], drawLexis(enter, exit, event, birthdate, col = "blue", add = TRUE))
+abline(h = 105)
+##abline(v = c(1969, 2014), lty = 3)
+abline(h = c(106, 107, 108, 109, 110, 111, 112, 113, 114), lty = 3)
+legend("topleft", legend = c("Men", "Women"), col = c("blue", "red"), lty = 1)
+legend("top", legend = c("Dead", "Censored"), pch = c("+", "o"))
+lines(c(1969, 1969 + 8), c(105, 105 + 8), lwd = 2)
+lines(c(lastyr+0.1, lastyr + 0.1 + 8), c(105, 105 + 8), lwd = 2)
+```
+
+\scriptsize
+
+`r n.w` women, `r n.m` men.
+
+## Cohort Analysis
+
+\scriptsize
+
+```{r cohanal, results='asis'}
+c105$cohort <- cut(c105$birthdate + 105, c(1969, 1985, 1995, 2004))
+fit <- phreg(Surv(enter, exit, event) ~ cohort + sex, data = c105, dist = "gompertz", param = "rate")
+dr <- drop1(fit, test = "Chisq")
+ltx(fit, dr = dr)
+```
+
+
+## Cumulative hazards by period
+
+```{r bysex}
+fit <- coxreg(Surv(enter, exit, event) ~ strata(cohort), data = c105)
+plot(fit, col = c("blue", "red", "black"), lwd = 1.5, lty = c(1, 2, 4), xlab = "Age", fn = "surv")
+abline(h = 0, v = 105)
 ```
